set map position to fixed to allow scroll on smaller viewports

--- a/css/app/eeb-map.css
+++ b/css/app/eeb-map.css
@@ -133,7 +133,7 @@ select.form-control {
 /****** visualizations ******/
 
 #map { 
-  position: absolute; 
+  position: fixed; 
   top: 145px; 
   bottom: 0; 
   right: 0; 
